user2/00-namespace-spark-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "u2-spark-cluster"
  labels:
    name: "u2-spark-cluster"
