user2/spark-ui-proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-ui-proxy
  namespace: u2-spark-cluster
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: spark-ui-proxy
  type: LoadBalancer
