user2/zeppelin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zeppelin
  namespace: u2-spark-cluster
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    component: zeppelin
  type: LoadBalancer
